# flapjack

./: Cargo.toml  README.md  RELEASES.md  foo.flap  meow.flap
.github/workflows/: check.yml
example_logs/directives/: input.flap  output.flap
manual_tests/directives/: Cargo.toml
manual_tests/directives/src/: main.rs
src/: directive_sequence.rs  file_io.rs  flap_sequence.rs  lib.rs  main.rs  option_repl.rs  updates.rs
src/file_io/: mod.rs
src/flapjack_stack/: flap_sequence_builder.rs  flapjack.rs  flapjack_stack_builder.rs  mod.rs
src/option_repl/: create_menu_interface.rs  decrement_menu_interface.rs  destroy_menu_interface.rs  increment_menu_interface.rs  mod.rs  set_menu_interface.rs
src/parser/: directive_sequence.rs  mod.rs
tests/: flap_sequence_io.rs  flap_sequence_serialize_deserialize.rs
tests/test_files/serialize_deserialize/: input.flap
tools/: make-release-builds.sh
